Bug 1210877 - Make nsBidiPresUtils::RepositionFrame work also for box-decoration-break:clone.  r=roc, a=lizzard